// Global using directives

global using Grpc.Core;

global using PatternPal.CommonResources;
global using PatternPal.Core;
global using PatternPal.Protos;
global using PatternPal.StepByStep;
global using PatternPal.StepByStep.Abstractions;

global using RecognizerService = PatternPal.Services.RecognizerService;
global using StepByStepService = PatternPal.Services.StepByStepService;
